Revision history for Open-This

{{$NEXT}}

0.000003  2018-02-08 17:11:27Z
    - parse_text() now accepts an array, which means less situations where args
      to ot need to be quoted at the command line

0.000002  2018-02-07 17:05:20Z
    - Pod formatting

0.000001  2018-02-06 16:14:35Z
    - Initial release.