@@ -1,6 +1,7 @@
 Revision history for Open-This
 
 {{$NEXT}}
+    - Try to fix some tests when running under MSWin32
 
 0.000003  2018-02-08 17:11:27Z
     - parse_text() now accepts an array, which means less situations where args
